# StegHunter

./: .gitignore  DOCUMENTATION_SUMMARY.md  ML_MULTI_MODEL_GUIDE.md  ML_STATUS_REPORT.md  PDF_CONVERSION_GUIDE.md  PDF_CONVERSION_VISUAL_GUIDE.md  README.md  START_HERE.md  STEGHUNTER_PROFESSIONAL_REPORT.md  convert_to_pdf.py  fix_sklearn_warning.bat  hybrid_test_results.json  pyproject.toml  results.csv  setup.py  steg-hunter.bat  steg_hunter_cli.py  steg_hunter_gui.py  test_hybrid.py  test_ml_status.py  test_output.txt  train_deep_stego_cnn.py
.github/: copilot-instructions.md
config/: steg_hunter_config.yaml
models/: steg_model.pkl  steg_model_ensemble.pkl  steg_model_svm.pkl  steg_model_xgboost.pkl
requirements/: requirements.txt
scripts/: evaluate_model.py  generate_blackbook_report.py  generate_training_data.py
src/: __init__.py
src/common/: __init__.py  config_manager.py  constants.py  exceptions.py  image_utils.py  logger.py  timeout_handler.py  utils.py  validators.py
src/core/: __init__.py  analyzer.py  clone_detector.py  color_space_analyzer.py  dct_stego_analyzer.py  deep_learning.py  deep_stego_cnn.py  ela_analyzer.py  ensemble_steganalysis.py  frequency_analysis.py  lsb_analyzer.py  (+21 more)
steg_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_models/: hybrid_model_ensemble.pkl  hybrid_model_metadata.json  hybrid_model_xgb.pkl
tests/: __init__.py  conftest.py  create_test_images.py  test_analyzer.py  test_basic.py  test_cli.py  test_clone_detector.py  test_color_space_analyzer.py  test_ela_analyzer.py  test_frequency_analysis.py  test_heatmap.py  test_jpeg_ghost_analyzer.py  test_lsb_analyzer.py  test_ml_classifier.py  test_ml_features.py  test_multi_model_ml.py  test_noise_analyzer.py  test_option_a_improvements.py  test_statistical_tests.py  test_validators.py  test_video_analyzer.py
(+17 files in other folders)
